change to redirect to pdf

--- a/index.html
+++ b/index.html
@@ -1,27 +1,3 @@
-<h1 id="as-of-may-2014"><em><span>(as of May 2014)</span></em></h1>
-<h1 id="education">Education</h1>
-<p><span><strong>Alma College</strong></span>, Alma, MI 2008-2012<br /><span><em>B.S., Computer Science</em></span></p>
-<p><span><strong>Michigan State University</strong></span>, East Lansing, MI 2012-present<br /><span><em>Brown Lab, PhD. student, Computer Science</em></span></p>
-<h1 id="honours-and-awards">Honours and<br />Awards</h1>
-<p>National Merit Finalist 2008<br />Alma College / Distinguished Scholar Award 2008-2012<br />Binghamton University / Research Experience for Undergrads summer 2011<br />USDA / MSU/ National Needs Fellow 2013-present<br /></p>
-<h1 id="manuscripts">Manuscripts</h1>
-<p><span><em>Evolution of Functionally Modular Codes in the Absence of Recombination.</em></span> Scott C, Wilburn P, and Burmeister A. In prep.</p>
-<p><span><em>The khmer software package: enabling efficient sequence analysis.</em></span> MR Crusoe <span><em>et. al.</em></span>, 2014. doi: 10.6084/m9.figshare.979190.</p>
-<h1 id="blogs-and-social-media">Blogs and social media</h1>
-<p>Professional blog at: <a href="http://camillescott.github.io/blog/">camillescott.github.io/blog</a></p>
-<p>Twitter: <a href="http://twitter.com/camille_codon">@camille_codon</a></p>
-<p>Github: <a href="https://github.com/camillescott">github.com/camillescott</a></p>
-<h1 id="professional-activities">Professional<br />Activities</h1>
-<p>TA for Intro to Computer Science, Alma College 2011-2012</p>
-<p>Co-founder, Alma College Association for Computer Machinery 2012</p>
-<p>Lead Instructor/TA for CSE 101, MSU fall 2012</p>
-<p>Presenter at MSU Summer Research Opportunities Workshop 5/2013</p>
-<p>TA for workshop at <span><strong>Marine Biological Laboratory</strong></span>,<br /><span><em>Strategies and Techniques for Analyzing Microbial Population Structures</em></span> 8/2013</p>
-<p>TA for workshop at <span><strong>California Institute of Technology</strong></span>,<br /><span><em>Workshop on Microbial Bioinformatics</em></span> 10/2013<br /></p>
-<p>Contributor to khmer Protocols Project: <a href="https://khmer-protocols.readthedocs.org/">khmer-protocols.readthedocs.org</a></p>
-<p>Contributor to open source khmer k-mer software: <a href="https://github.com/ged-lab/khmer/">github.com/ged-lab/khmer</a></p>
-<h1 id="references">References</h1>
-<p><span><em>(Contact details available upon request)</em></span></p>
-<p>Professor C. Titus Brown, Michigan State University</p>
-<p>Professor Weiming Li, Michigan State University</p>
-<p>Professor Andrew Thall, Alma College</p>
+<head>
+<meta http-equiv="refresh" content="0; url=full-CV.pdf">
+</head>
